[package]
name = "self-driving-car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true


[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
getrandom = { version = "0.2.9", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
gloo = "0.11.0"
yew = { version = "0.21.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "Storage",
    "Window",
    "HtmlCanvasElement",
    "HtmlButtonElement",
]
